--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "next": "12.1.6",
+    "next-connect": "^0.12.2",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-query": "^3.38.1"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
