--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.4",
+    "@mui/styles": "^5.6.2",
     "next": "12.1.6",
     "next-connect": "^0.12.2",
     "react": "18.1.0",
