--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.6.4",
     "@mui/styles": "^5.6.2",
     "formik": "^2.2.9",
+    "lodash": "^4.17.21",
     "next": "12.1.6",
     "next-connect": "^0.12.2",
     "react": "18.1.0",
